SKilLls/src/src/SKilLParser.java
// Generated from ..\src\SKilLParser.g4 by ANTLR 4.5.1
package grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SKilLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		HEAD_COMMENT=1, INCLUDE=2, WITH=3, EXTENDS=4, DOUBLEPOINT=5, BRACEO=6, 
		BRACEC=7, ENUM=8, INTERFACE=9, TYPEDEF=10, CONST=11, AUTO=12, MAP=13, 
		SET=14, LIST=15, ANNOTATION=16, COMMA=17, SEMICOLON=18, PARENTHESEO=19, 
		PARENTHESEC=20, LESSTHAN=21, GREATERTHAN=22, BRACKETO=23, BRACKETC=24, 
		EXCLAMATIONMARK=25, AT=26, EQUAL=27, COMMENT=28, Identifier=29, IntegerConstant=30, 
		FloatingConstant=31, StringLiteral=32, Whitespace=33, Newline=34;
	public static final int
		RULE_file = 0, RULE_header = 1, RULE_include = 2, RULE_declaration = 3, 
		RULE_usertype = 4, RULE_enumtype = 5, RULE_interfacetype = 6, RULE_typedef = 7, 
		RULE_field = 8, RULE_constant = 9, RULE_data = 10, RULE_type = 11, RULE_typemulti = 12, 
		RULE_typesingle = 13, RULE_arraytype = 14, RULE_groundtype = 15, RULE_description = 16, 
		RULE_restriction = 17, RULE_rarg = 18, RULE_hint = 19;
	public static final String[] ruleNames = {
		"file", "header", "include", "declaration", "usertype", "enumtype", "interfacetype", 
		"typedef", "field", "constant", "data", "type", "typemulti", "typesingle", 
		"arraytype", "groundtype", "description", "restriction", "rarg", "hint"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, "'include'", "'with'", "'extends'", "':'", "'{'", "'}'", "'enum'", 
		"'interface'", "'typedef'", "'const'", "'auto'", "'map'", "'set'", "'list'", 
		"'annotation'", "','", "';'", "'('", "')'", "'<'", "'>'", "'['", "']'", 
		"'!'", "'@'", "'='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "HEAD_COMMENT", "INCLUDE", "WITH", "EXTENDS", "DOUBLEPOINT", "BRACEO", 
		"BRACEC", "ENUM", "INTERFACE", "TYPEDEF", "CONST", "AUTO", "MAP", "SET", 
		"LIST", "ANNOTATION", "COMMA", "SEMICOLON", "PARENTHESEO", "PARENTHESEC", 
		"LESSTHAN", "GREATERTHAN", "BRACKETO", "BRACKETC", "EXCLAMATIONMARK", 
		"AT", "EQUAL", "COMMENT", "Identifier", "IntegerConstant", "FloatingConstant", 
		"StringLiteral", "Whitespace", "Newline"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SKilLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SKilLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FileContext extends ParserRuleContext {
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SKilLParserListener ) ((SKilLParserListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SKilLParserListener ) ((SKilLParserListener)listener).exitFile(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			header();
			setState(44);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ENUM) | (1L << INTERFACE) | (1L << TYPEDEF) | (1L << EXCLAMATIONMARK) | (1L << AT) | (1L << COMMENT) | (1L << Identifier))) != 0)) {
				{
				{
				setState(41);
				declaration();
				}
				}
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public List<TerminalNode> HEAD_COMMENT() { return getTokens(SKilLParser.HEAD_COMMENT); }
		public TerminalNode HEAD_COMMENT(int i) {
			return getToken(SKilLParser.HEAD_COMMENT, i);
		}
		public List<IncludeContext> include() {
			return getRuleContexts(IncludeContext.class);
		}
		public IncludeContext include(int i) {
			return getRuleContext(IncludeContext.class,i);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SKilLParserListener ) ((SKilLParserListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SKilLParserListener ) ((SKilLParserListener)listener).exitHeader(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==HEAD_COMMENT) {
				{
				{
				setState(47);
				match(HEAD_COMMENT);
				}
				}
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INCLUDE || _la==WITH) {
				{
				{
				setState(53);
				include();
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncludeContext extends ParserRuleContext {
		public List<TerminalNode> StringLiteral() { return getTokens(SKilLParser.StringLiteral); }
		public TerminalNode StringLiteral(int i) {
			return getToken(SKilLParser.StringLiteral, i);
		}
		public IncludeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_include; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SKilLParserListener ) ((SKilLParserListener)listener).enterInclude(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SKilLParserListener ) ((SKilLParserListener)listener).exitInclude(this);
		}
	}

	public final IncludeContext include() throws RecognitionException {
		IncludeContext _localctx = new IncludeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_include);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_la = _input.LA(1);
			if ( !(_la==INCLUDE || _la==WITH) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(61); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(60);
				match(StringLiteral);
				}
				}
				setState(63); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==StringLiteral );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public UsertypeContext usertype() {
			return getRuleContext(UsertypeContext.class,0);
		}
		public EnumtypeContext enumtype() {
			return getRuleContext(EnumtypeContext.class,0);
		}
		public InterfacetypeContext interfacetype() {
			return getRuleContext(InterfacetypeContext.class,0);
		}
		public TypedefContext typedef() {
			return getRuleContext(TypedefContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SKilLParserListener ) ((SKilLParserListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SKilLParserListener ) ((SKilLParserListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(65);
				usertype();
				}
				break;
			case 2:
				{
				setState(66);
				enumtype();
				}
				break;
			case 3:
				{
				setState(67);
				interfacetype();
				}
				break;
			case 4:
				{
				setState(68);
				typedef();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UsertypeContext extends ParserRuleContext {
		public Token name;
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public List<TerminalNode> Identifier() { return getTokens(SKilLParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(SKilLParser.Identifier, i);
		}
		public List<FieldContext> field() {
			return getRuleContexts(FieldContext.class);
		}
		public FieldContext field(int i) {
			return getRuleContext(FieldContext.class,i);
		}
		public UsertypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_usertype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SKilLParserListener ) ((SKilLParserListener)listener).enterUsertype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SKilLParserListener ) ((SKilLParserListener)listener).exitUsertype(this);
		}
	}

	public final UsertypeContext usertype() throws RecognitionException {
		UsertypeContext _localctx = new UsertypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_usertype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			description();
			setState(72);
			((UsertypeContext)_localctx).name = match(Identifier);
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WITH) | (1L << EXTENDS) | (1L << DOUBLEPOINT))) != 0)) {
				{
				{
				setState(73);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WITH) | (1L << EXTENDS) | (1L << DOUBLEPOINT))) != 0)) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(74);
				match(Identifier);
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(80);
			match(BRACEO);
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CONST) | (1L << AUTO) | (1L << MAP) | (1L << SET) | (1L << LIST) | (1L << ANNOTATION) | (1L << EXCLAMATIONMARK) | (1L << AT) | (1L << COMMENT) | (1L << Identifier))) != 0)) {
				{
				{
				setState(81);
				field();
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(87);
			match(BRACEC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EnumtypeContext extends ParserRuleContext {
		public Token name;
		public List<TerminalNode> Identifier() { return getTokens(SKilLParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(SKilLParser.Identifier, i);
		}
		public TerminalNode COMMENT() { return getToken(SKilLParser.COMMENT, 0); }
		public List<FieldContext> field() {
			return getRuleContexts(FieldContext.class);
		}
		public FieldContext field(int i) {
			return getRuleContext(FieldContext.class,i);
		}
		public EnumtypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enumtype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SKilLParserListener ) ((SKilLParserListener)listener).enterEnumtype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SKilLParserListener ) ((SKilLParserListener)listener).exitEnumtype(this);
		}
	}

	public final EnumtypeContext enumtype() throws RecognitionException {
		EnumtypeContext _localctx = new EnumtypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_enumtype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_la = _input.LA(1);
			if (_la==COMMENT) {
				{
				setState(89);
				match(COMMENT);
				}
			}

			setState(92);
			match(ENUM);
			setState(93);
			((EnumtypeContext)_localctx).name = match(Identifier);
			setState(94);
			match(BRACEO);
			setState(95);
			match(Identifier);
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(96);
				match(COMMA);
				setState(97);
				match(Identifier);
				}
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(103);
			match(SEMICOLON);
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CONST) | (1L << AUTO) | (1L << MAP) | (1L << SET) | (1L << LIST) | (1L << ANNOTATION) | (1L << EXCLAMATIONMARK) | (1L << AT) | (1L << COMMENT) | (1L << Identifier))) != 0)) {
				{
				{
				setState(104);
				field();
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(110);
			match(BRACEC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InterfacetypeContext extends ParserRuleContext {
		public Token name;
		public List<TerminalNode> Identifier() { return getTokens(SKilLParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(SKilLParser.Identifier, i);
		}
		public TerminalNode COMMENT() { return getToken(SKilLParser.COMMENT, 0); }
		public List<FieldContext> field() {
			return getRuleContexts(FieldContext.class);
		}
		public FieldContext field(int i) {
			return getRuleContext(FieldContext.class,i);
		}
		public InterfacetypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfacetype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SKilLParserListener ) ((SKilLParserListener)listener).enterInterfacetype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SKilLParserListener ) ((SKilLParserListener)listener).exitInterfacetype(this);
		}
	}

	public final InterfacetypeContext interfacetype() throws RecognitionException {
		InterfacetypeContext _localctx = new InterfacetypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_interfacetype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			_la = _input.LA(1);
			if (_la==COMMENT) {
				{
				setState(112);
				match(COMMENT);
				}
			}

			setState(115);
			match(INTERFACE);
			setState(116);
			((InterfacetypeContext)_localctx).name = match(Identifier);
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WITH) | (1L << EXTENDS) | (1L << DOUBLEPOINT))) != 0)) {
				{
				{
				setState(117);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WITH) | (1L << EXTENDS) | (1L << DOUBLEPOINT))) != 0)) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(118);
				match(Identifier);
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(124);
			match(BRACEO);
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CONST) | (1L << AUTO) | (1L << MAP) | (1L << SET) | (1L << LIST) | (1L << ANNOTATION) | (1L << EXCLAMATIONMARK) | (1L << AT) | (1L << COMMENT) | (1L << Identifier))) != 0)) {
				{
				{
				setState(125);
				field();
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(131);
			match(BRACEC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypedefContext extends ParserRuleContext {
		public Token name;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(SKilLParser.Identifier, 0); }
		public TerminalNode COMMENT() { return getToken(SKilLParser.COMMENT, 0); }
		public List<RestrictionContext> restriction() {
			return getRuleContexts(RestrictionContext.class);
		}
		public RestrictionContext restriction(int i) {
			return getRuleContext(RestrictionContext.class,i);
		}
		public List<HintContext> hint() {
			return getRuleContexts(HintContext.class);
		}
		public HintContext hint(int i) {
			return getRuleContext(HintContext.class,i);
		}
		public TypedefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typedef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SKilLParserListener ) ((SKilLParserListener)listener).enterTypedef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SKilLParserListener ) ((SKilLParserListener)listener).exitTypedef(this);
		}
	}

	public final TypedefContext typedef() throws RecognitionException {
		TypedefContext _localctx = new TypedefContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_typedef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			_la = _input.LA(1);
			if (_la==COMMENT) {
				{
				setState(133);
				match(COMMENT);
				}
			}

			setState(136);
			match(TYPEDEF);
			setState(137);
			((TypedefContext)_localctx).name = match(Identifier);
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==EXCLAMATIONMARK || _la==AT) {
				{
				setState(140);
				switch (_input.LA(1)) {
				case AT:
					{
					setState(138);
					restriction();
					}
					break;
				case EXCLAMATIONMARK:
					{
					setState(139);
					hint();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(145);
			type();
			setState(146);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldContext extends ParserRuleContext {
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public DataContext data() {
			return getRuleContext(DataContext.class,0);
		}
		public FieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SKilLParserListener ) ((SKilLParserListener)listener).enterField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SKilLParserListener ) ((SKilLParserListener)listener).exitField(this);
		}
	}

	public final FieldContext field() throws RecognitionException {
		FieldContext _localctx = new FieldContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_field);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			description();
			setState(151);
			switch (_input.LA(1)) {
			case CONST:
				{
				setState(149);
				constant();
				}
				break;
			case AUTO:
			case MAP:
			case SET:
			case LIST:
			case ANNOTATION:
			case Identifier:
				{
				setState(150);
				data();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(153);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(SKilLParser.Identifier, 0); }
		public TerminalNode IntegerConstant() { return getToken(SKilLParser.IntegerConstant, 0); }
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SKilLParserListener ) ((SKilLParserListener)listener).enterConstant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SKilLParserListener ) ((SKilLParserListener)listener).exitConstant(this);
		}
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_constant);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(CONST);
			setState(156);
			type();
			setState(157);
			match(Identifier);
			setState(158);
			match(EQUAL);
			setState(159);
			match(IntegerConstant);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(SKilLParser.Identifier, 0); }
		public DataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SKilLParserListener ) ((SKilLParserListener)listener).enterData(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SKilLParserListener ) ((SKilLParserListener)listener).exitData(this);
		}
	}

	public final DataContext data() throws RecognitionException {
		DataContext _localctx = new DataContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_data);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			_la = _input.LA(1);
			if (_la==AUTO) {
				{
				setState(161);
				match(AUTO);
				}
			}

			setState(164);
			type();
			setState(165);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TypemultiContext typemulti() {
			return getRuleContext(TypemultiContext.class,0);
		}
		public TypesingleContext typesingle() {
			return getRuleContext(TypesingleContext.class,0);
		}
		public ArraytypeContext arraytype() {
			return getRuleContext(ArraytypeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SKilLParserListener ) ((SKilLParserListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SKilLParserListener ) ((SKilLParserListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			switch (_input.LA(1)) {
			case MAP:
				{
				setState(167);
				match(MAP);
				setState(168);
				typemulti();
				}
				break;
			case SET:
				{
				setState(169);
				match(SET);
				setState(170);
				typesingle();
				}
				break;
			case LIST:
				{
				setState(171);
				match(LIST);
				setState(172);
				typesingle();
				}
				break;
			case ANNOTATION:
			case Identifier:
				{
				setState(173);
				arraytype();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypemultiContext extends ParserRuleContext {
		public List<GroundtypeContext> groundtype() {
			return getRuleContexts(GroundtypeContext.class);
		}
		public GroundtypeContext groundtype(int i) {
			return getRuleContext(GroundtypeContext.class,i);
		}
		public TypemultiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typemulti; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SKilLParserListener ) ((SKilLParserListener)listener).enterTypemulti(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SKilLParserListener ) ((SKilLParserListener)listener).exitTypemulti(this);
		}
	}

	public final TypemultiContext typemulti() throws RecognitionException {
		TypemultiContext _localctx = new TypemultiContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_typemulti);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			match(LESSTHAN);
			setState(177);
			groundtype();
			setState(180); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(178);
				match(COMMA);
				setState(179);
				groundtype();
				}
				}
				setState(182); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==COMMA );
			setState(184);
			match(GREATERTHAN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypesingleContext extends ParserRuleContext {
		public GroundtypeContext groundtype() {
			return getRuleContext(GroundtypeContext.class,0);
		}
		public TypesingleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typesingle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SKilLParserListener ) ((SKilLParserListener)listener).enterTypesingle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SKilLParserListener ) ((SKilLParserListener)listener).exitTypesingle(this);
		}
	}

	public final TypesingleContext typesingle() throws RecognitionException {
		TypesingleContext _localctx = new TypesingleContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_typesingle);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			match(LESSTHAN);
			setState(187);
			groundtype();
			setState(188);
			match(GREATERTHAN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
